figurig out a good architecture for the algorithm

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,12 +3,21 @@ project(fabrik VERSION 0.1.0)
 
 # do the include_dirs here
 
-add_subdirectory(src)
-
-
+# ${CMAKE_CURRENT_SOURCE_DIR} is the address of where this CMakeLists.txt
 set(FABRIK_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/src;${CMAKE_CURRENT_BINARY_DIR}/src")
-
 include_directories("${FABRIK_INCLUDE_DIRS}")
+
+enable_testing()
+# include(CTest)
+
+add_subdirectory(src)
+add_subdirectory(tests)
+
+
+
+# how to cout message in boost unit test
+
+
 
 
 
