working on making the library right in terms of cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,36 +1,98 @@
-cmake_minimum_required(VERSION 3.0.0)
-project(fabrik VERSION 0.1.0)
+cmake_minimum_required(VERSION 3.5)
+project(fabrik
+        VERSION 0.1.0
+)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/lib")
+# --- set the default build type
+set(CMAKE_BUILD_TYPE "Debug" CACHE STRING "Type of build" FORCE)
+message(STATUS "Build type: ${CMAKE_BUILD_TYPE}")
 
-# set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+# --- GNUInstallDirs set the variable for paths (relative or absolute)
+# the base point(absolute path starting point), ${CMAKE_INSTALL_PREFIX}, is set to /usr/local
+include(GNUInstallDirs)
+message(STATUS "CMAKE_INSTALL_PREFIX: ${CMAKE_INSTALL_PREFIX}")
+message(STATUS "CMAKE_INSTALL_LIBDIR: ${CMAKE_INSTALL_LIBDIR}")
+message(STATUS "CMAKE_BINARY_DIR: ${CMAKE_BINARY_DIR}")
 
-# message([WARNING] ${CMAKE_INSTALL_LIBDIR})
+# --- find depend upon packages
+find_package(Eigen3 REQUIRED)
+include_directories(
+    ${EIGEN3_INCLUDE_DIRS}
+)
+
+# create config file using cmake helper
+# include(CMakePackageConfigHelpers)
+# 1 arg: input, 2 arg: ouput
+# INSTALL_DESTINATION is where the ouput will be installed
+# NO_CHECK_REQUIRED_COMPONENTS_MACRO prevents @package_init@ from defining some helper function
+# set(INCLUDE_INSTALL_DIR ${CMAKE_INSTALL_INCLUDEDIR})
 # set(LIB_INSTALL_DIR ${CMAKE_INSTALL_LIBDIR})
-
-# do the include_dirs here
-
-# ${CMAKE_CURRENT_SOURCE_DIR} is the address of where this CMakeLists.txt
-set(FABRIK_INCLUDE_DIRS "${CMAKE_CURRENT_SOURCE_DIR}/src;${CMAKE_CURRENT_BINARY_DIR}/src")
-include_directories("${FABRIK_INCLUDE_DIRS}")
+# configure_package_config_file(fabrikConfig.cmake.in
+#     ${CMAKE_BINARY_DIR}/fabrikConfig.cmake
+#     INSTALL_DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/fabrik/cmake
+#     PATH_VARS INCLUDE_INSTALL_DIR LIB_INSTALL_DIR
+#     NO_CHECK_REQUIRED_COMPONENTS_MACRO)
 
 enable_testing()
 # include(CTest)
 
-add_subdirectory(src)
+
+# --- This is a list of directories to be used as header search paths, 
+# all of which must be absolute paths
+set(FABRIK_INCLUDE_DIRS "${CMAKE_SOURCE_DIR}/src;${CMAKE_BINARY_DIR}/src")
+include_directories(${FABRIK_INCLUDE_DIRS})
+# the paths after FABRIK_INCLUDE_DIRS should be used to reach to the specific header file. example:
+# to use world.h anywhere in *.cpp files of this project, I have to include "fabrik/world/world.h"
+# full path: [CMAKE_CURRENT_SOURCE_DIR/src/][fabrik/world/world.h]
+
+# Generate a list of files and store them in variables FABRIK_SOURCE_CODE
+# and FABRIK_HEADERS for source and headers
+file(GLOB_RECURSE FABRIK_SOURCE_CODE src/fabrik/world/*.cpp src/fabrik/robot_model/*.cpp src/fabrik/robot_state/*.cpp src/fabrik/util/*.cpp src/fabrik/base/*.cpp)
+file(GLOB_RECURSE FABRIK_HEADERS src/fabrik/world/*.h src/fabrik/robot_model/*.h src/fabrik/robot_state/*.h src/fabrik/util/*.h src/fabrik/base/*.h)
+
+# put shared and static library in lib folder and executables in bin folder.
+# these must be set before add_library and add_executable
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+# make fabrik library here
+add_library(fabrik SHARED ${FABRIK_SOURCE_CODE})
+target_link_libraries(fabrik Eigen3::Eigen)
+
+message(STATUS "--------------- ${CMAKE_LIBRARY_OUTPUT_DIRECTORY}")
+
+
+# install the library
+install(TARGETS fabrik 
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+)
+
+
+# install(FILES "${PROJECT_BINARY_DIR}/${PROJECT_NAME}Config.cmake"
+# "${PROJECT_BINARY_DIR}/${PROJECT_NAME}ConfigVersion.cmake"
+# DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${PROJECT_NAME}/cmake)
+
+# ----- install headers
+# installs the content of DIRECTORY to a given DESTINATION
+# The directory structure is copied verbatim(word by word = exactly) to the destination
+# install(
+#     DIRECTORY src/fabrik/ 
+#     DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/fabrik"
+#     COMPONENT fabrik
+#     FILES_MATCHING 
+#     PATTERN "*.h" 
+#     PATTERN ".DS_Store" EXCLUDE
+#     PATTERN "sample_contrib" EXCLUDE
+#     REGEX "/src$" EXCLUDE
+#     REGEX "/doc$" EXCLUDE
+#     REGEX "/tests$" EXCLUDE
+# )
+
+
+
+
+
+# add_subdirectory(src/fabrik)
 add_subdirectory(tests)
-
-
-
-
-
-
-
-
-
-
 
