--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -34,6 +34,7 @@ if (FABRIK_BUILD_TESTS)
     add_fabrik_test(test_robot_state robot_state/robot_state.cpp)
     add_fabrik_test(test_math util/math.cpp)
     add_fabrik_test(test_calculator base/calculator.cpp)
+    add_fabrik_test(test_fabrik base/fabrik.cpp)
     
 endif()
 
