--- a/fabrikConfig.cmake.in
+++ b/fabrikConfig.cmake.in
@@ -20,7 +20,7 @@ set(FABRIK_MINOR_VERSION @PROJECT_VERSION_MINOR@)
 set(FABRIK_PATCH_VERSION @PROJECT_VERSION_PATCH@)
 
 set_and_check(FABRIK_INCLUDE_DIR "@PACKAGE_INCLUDE_INSTALL_DIR@")
-set(FABRIK_INCLUDE_DIRS "${FABRIK_INCLUDE_DIR};@EIGEN3_INCLUDE_DIR@;@FCL_INCLUDE_DIRS@;@ASSIMP_INCLUDE_DIRS@")
+set(FABRIK_INCLUDE_DIRS "${FABRIK_INCLUDE_DIR};@EIGEN3_INCLUDE_DIR@")
 list(REMOVE_DUPLICATES FABRIK_INCLUDE_DIRS)
 list(REMOVE_ITEM FABRIK_INCLUDE_DIRS "")
 set(FABRIK_INCLUDE_DIRS "${FABRIK_INCLUDE_DIRS}" CACHE STRING "Include path for FABRIK and its dependencies")
