construct fabrik with only robot_model. add solveFK and solveIK with function to set the ik problem parameters

--- a/src/fabrik/CMakeLists.txt
+++ b/src/fabrik/CMakeLists.txt
@@ -22,7 +22,7 @@ install(TARGETS fabrik
 install(
     DIRECTORY fabrik/ 
     DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/fabrik"
-    COMPONENT fabrik
+    # COMPONENT fabrik
     FILES_MATCHING 
     PATTERN "*.h" 
     PATTERN ".DS_Store" EXCLUDE
