--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,42 +46,14 @@ include_directories(${FABRIK_INCLUDE_DIRS})
 # to use world.h anywhere in *.cpp files of this project, I have to include "fabrik/world/world.h"
 # full path: [CMAKE_CURRENT_SOURCE_DIR/src/][fabrik/world/world.h]
 
-# Generate a list of files and store them in variables FABRIK_SOURCE_CODE
-# and FABRIK_HEADERS for source and headers
-file(GLOB_RECURSE FABRIK_SOURCE_CODE src/fabrik/robot_model/*.cpp src/fabrik/robot_state/*.cpp src/fabrik/util/*.cpp src/fabrik/base/*.cpp)
-file(GLOB_RECURSE FABRIK_HEADERS src/fabrik/robot_model/*.h src/fabrik/robot_state/*.h src/fabrik/util/*.h src/fabrik/base/*.h)
-
 # put shared and static library in lib folder and executables in bin folder.
 # these must be set before add_library and add_executable
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-# make fabrik library here
-add_library(fabrik SHARED ${FABRIK_SOURCE_CODE})
-# target_link_libraries(fabrik Eigen3::Eigen)
-
-
-# install the library
-install(TARGETS fabrik 
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
-)
-
-# ----- install headers
-# installs the DIRECTORY and its contents to a given DESTINATION
-# The directory structure is copied verbatim(word by word = exactly) to the destination
-install(
-    DIRECTORY src/fabrik
-    DESTINATION  ${CMAKE_INSTALL_INCLUDEDIR}
-    COMPONENT fabrik
-    FILES_MATCHING 
-    PATTERN "*.h" 
-    PATTERN ".DS_Store" EXCLUDE
-    PATTERN "sample_contrib" EXCLUDE
-    REGEX "/src$" EXCLUDE
-    REGEX "/doc$" EXCLUDE
-    REGEX "/tests$" EXCLUDE
-)
+add_subdirectory(src)
+add_subdirectory(tests)
 
 # fabrikConfig.cmake was created by configure_package_config_file() using fabrikConfig.cmake.in that I have created
 install(FILES ${CMAKE_BINARY_DIR}/fabrikConfig.cmake
@@ -89,8 +61,3 @@ install(FILES ${CMAKE_BINARY_DIR}/fabrikConfig.cmake
     DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/fabrik/cmake
     #COMPONENT ompl what is component ??????????????????????????
 )
-
-
-# add_subdirectory(src/fabrik)
-add_subdirectory(tests)
-
